--- a/repo/current/plugins-miscel/pom.xml
+++ b/repo/current/plugins-miscel/pom.xml
@@ -5,7 +5,8 @@
  * All rights reserved.
  */
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
@@ -18,7 +19,7 @@
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>plugins-miscel</artifactId>
     <packaging>pom</packaging>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>IntAct Maven Plugins</name>
     <url>http://www.ebi.ac.uk/~baranda/intact/maven-plugins</url>
@@ -26,7 +27,8 @@
 
     <scm>
         <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/current/plugins</connection>
-        <developerConnection>scm:svn:https://svn.sourceforge.net/svnroot/intact/repo/current/plugins</developerConnection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/current/plugins
+        </developerConnection>
         <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/current/plugins</url>
     </scm>
 
@@ -118,7 +120,7 @@
 
     <repositories>
         <repository>
-            <releases />
+            <releases/>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -130,7 +132,7 @@
             <releases>
                 <enabled>false</enabled>
             </releases>
-            <snapshots />
+            <snapshots/>
             <id>ebi-repo-snapshots</id>
             <name>The EBI internal repository</name>
             <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
