--- a/repo/maven-plugins/dataminer-export-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/dataminer-export-maven-plugin/trunk/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,15 +13,15 @@
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>dataminer-export-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>dataminer-export-maven-plugin</name>
     <description>Dataminer export plugin for IntAct</description>
     <url>http://www.ebi.ac.uk/~intact/devsite/maven-plugins/dataminer-export-maven-plugin</url>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/dataminer-export-maven-plugin/trunk</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/dataminer-export-maven-plugin/trunk</developerConnection>
+        <connection> scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/dataminer-export-maven-plugin/trunk</connection>
+        <developerConnection> scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/dataminer-export-maven-plugin/trunk</developerConnection>
         <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/dataminer-export-maven-plugin/trunk/</url>
     </scm>
 
