--- a/repo/maven-plugins/ebeye-export-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/ebeye-export-maven-plugin/trunk/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>ebeye-export-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>ebeye-export-maven-plugin Maven Mojo</name>
     <description>EB-eye export plugin for IntAct</description>
@@ -19,7 +19,7 @@
     <scm>
         <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/ebeye-export-maven-plugin/trunk</connection>
         <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/ebeye-export-maven-plugin/trunk</developerConnection>
-        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/intact/repo/maven-plugins/ebeye-export-maven-plugin/trunk</url>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/intact/repo/maven-plugins/ebeye-export-maven-plugin/trunk</url>
     </scm>
 
     <dependencies>
