--- a/repo/maven-plugins/predict-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/predict-maven-plugin/trunk/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>predict-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>Plugin - predict-maven-plugin</name>
     <description>Plugin for IntAct</description>
@@ -20,7 +20,7 @@
     <scm>
         <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/predict-maven-plugin/trunk</connection>
         <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/predict-maven-plugin/trunk</developerConnection>
-        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/predict-maven-plugin/trunk/</url>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/predict-maven-plugin/trunk/</url>
     </scm>
 
     <dependencies>
