--- a/repo/maven-plugins/update-component-role-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/update-component-role-maven-plugin/trunk/pom.xml
@@ -1,8 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -10,7 +13,7 @@
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>update-component-role-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>Plugin - update-component-role-maven-plugin</name>
     <description>Plugin for updating the role of the component when migrating from intact-core 1.5.0 to 1.6.0.
@@ -22,9 +25,14 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/update-component-role-maven-plugin/trunk</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/update-component-role-maven-plugin/trunk</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/update-component-role-maven-plugin/trunk/</url>
+        <connection>
+            scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/update-component-role-maven-plugin/trunk
+        </connection>
+        <developerConnection>
+            scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/update-component-role-maven-plugin/trunk
+        </developerConnection>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/update-component-role-maven-plugin/trunk/
+        </url>
     </scm>
 
 </project>
