--- a/repo/plugins-miscel/trunk/psimitab-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/psimitab-maven-plugin/pom.xml
@@ -5,21 +5,21 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
 
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>psimitab-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     
     <name>psimitab-maven-plugin Maven Mojo</name>
     <url>http://www.ebi.ac.uk/~intact/devsite/maven-plugins/${artifactId}</url>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/trunk/psimitab-maven-plugin</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/trunk/psimitab-maven-plugin</developerConnection>
-        <url>http://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/trunk/psimitab-maven-plugin/</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/tags/plugins-miscel-1.6.0/psimitab-maven-plugin</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/tags/plugins-miscel-1.6.0/psimitab-maven-plugin</developerConnection>
+        <url>http://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/tags/plugins-miscel-1.6.0/psimitab-maven-plugin</url>
     </scm>
 
     <dependencies>
