--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/src/test/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.category.psidev.psi.mi.xml=ERROR
 log4j.category.psidev.psi.mi.tab=ERROR
 log4j.category.psidev.psi.mi.tab.client=ERROR
 log4j.category.psidev.psi.mi.tab.expansion=ERROR
+log4j.category.uk.ac.ebi.intact.psimitab.InterproNameHandler=ERROR
 
 
 # ***** A is set to be a ConsoleAppender.
