--- a/repo/data-exchange/trunk/intact-enricher/pom.xml
+++ b/repo/data-exchange/trunk/intact-enricher/pom.xml
@@ -15,7 +15,7 @@
     <name>IntAct Data Exchange :: Enricher</name>
 
     <properties>
-        <bridges.version>2.0.2</bridges.version>
+        <bridges.version>2.0.3-SNAPSHOT</bridges.version>
     </properties>
 
     <dependencies>
