--- a/repo/bridges/trunk/intact-unisave/pom.xml
+++ b/repo/bridges/trunk/intact-unisave/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>bridges-master</artifactId>
         <groupId>uk.ac.ebi.intact.bridges</groupId>
-        <version>2.0.3</version>
+        <version>2.0.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <name>IntAct Bridges :: UniSave</name>
     <packaging>jar</packaging>
-    <version>2.0.3</version>
+    <version>2.0.4-SNAPSHOT</version>
 
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
