--- a/repo/bridges/trunk/coredep/intact-msd/pom.xml
+++ b/repo/bridges/trunk/coredep/intact-msd/pom.xml
@@ -3,14 +3,14 @@
     <parent>
        <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
        <artifactId>coredep</artifactId>
-       <version>2.0.4</version>
+       <version>2.0.5-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-msd</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.4</version>
+    <version>2.0.5-SNAPSHOT</version>
 
     <name>IntAct Bridges :: Core Dependent :: MSD</name>
 
