--- a/repo/data-exchange/trunk/pom.xml
+++ b/repo/data-exchange/trunk/pom.xml
@@ -19,7 +19,7 @@
     <url>http://www.ebi.ac.uk/~intact/devsite/dataexchange</url>
 
     <properties>
-        <version.core>1.9.0-SNAPSHOT</version.core>
+        <version.core>1.9.0</version.core>
     </properties>
 
     <scm>
