--- a/repo/plugins/trunk/intact-plugin/pom.xml
+++ b/repo/plugins/trunk/intact-plugin/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-master</artifactId>
-        <version>2.3</version>
+        <version>2.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-plugin</artifactId>
     <packaging>jar</packaging>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
 
     <name>Intact Plugins :: Base Library</name>
     <description>Contains common code and utilities for all intact plugins</description>
