--- a/repo/data-exchange/trunk/imex/pom.xml
+++ b/repo/data-exchange/trunk/imex/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange</groupId>
         <artifactId>dataexchange-master</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
     <groupId>uk.ac.ebi.intact.dataexchange.imex</groupId>
     <artifactId>imex</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>IntAct Data Exchange :: IMEx</name>
     <description>IMEx Master POM</description>
