--- a/repo/data-exchange/trunk/intact-cvutils/pom.xml
+++ b/repo/data-exchange/trunk/intact-cvutils/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>dataexchange-master</artifactId>
         <groupId>uk.ac.ebi.intact.dataexchange</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-cvutils</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>IntAct Data Exchange :: CV Utils</name>
 
