--- a/repo/data-exchange/trunk/intact-dbutils/pom.xml
+++ b/repo/data-exchange/trunk/intact-dbutils/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange</groupId>
         <artifactId>dataexchange-master</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-dbutils</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>Intact Data Exchange :: DB Utils</name>
 
