--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>psimitab-master</artifactId>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-psimitab-converters</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>IntAct Data Exchange :: PSI MI :: TAB :: IntAct PSI-MI TAB Converters</name>
 
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.1</version>
         </dependency>
 
         <dependency>
