--- a/repo/data-exchange/trunk/ebeye/intact-ebi-search-engine-export/pom.xml
+++ b/repo/data-exchange/trunk/ebeye/intact-ebi-search-engine-export/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.ebeye</groupId>
         <artifactId>ebeye</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
     <artifactId>intact-ebi-search-engine-export</artifactId>
 
     <packaging>jar</packaging>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: EB-eye :: Export</name>
 
