--- a/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
+++ b/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <artifactId>imex</artifactId>
         <groupId>uk.ac.ebi.intact.dataexchange.imex</groupId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-imex-repository</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: IMEx :: Repository</name>
 
