--- a/repo/data-exchange/trunk/intact-enricher/pom.xml
+++ b/repo/data-exchange/trunk/intact-enricher/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <artifactId>dataexchange-master</artifactId>
         <groupId>uk.ac.ebi.intact.dataexchange</groupId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-enricher</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: Enricher</name>
 
