--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
         <artifactId>psimitab-master</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-psimitab</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: PSI MI :: TAB :: PSI-MI TAB Integration</name>
 
