--- a/repo/data-exchange/trunk/psimi/psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
         <artifactId>psimi-master</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>psimitab-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: PSI MI :: TAB</name>
     <description>PSI MI TAB Master POM</description>
