--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-converters/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <artifactId>intact-psixml</artifactId>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-psixml-converters</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: PSI MI :: XML :: Converters</name>
     <description>Data converters from PSI XML schema objects to the IntAct model objects</description>
