--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
         <artifactId>intact-psixml</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
